[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "d01"
path = "01/main.rs"

[[bin]]
name = "d02"
path = "02/main.rs"

[[bin]]
name = "d03"
path = "03/main.rs"

[[bin]]
name = "d04"
path = "04/main.rs"

[[bin]]
name = "d05"
path = "05/main.rs"

[[bin]]
name = "d06"
path = "06/main.rs"

[[bin]]
name = "d07"
path = "07/main.rs"

[[bin]]
name = "d08"
path = "08/main.rs"

[[bin]]
name = "d09"
path = "09/main.rs"

[[bin]]
name = "d10"
path = "10/main.rs"

# dtest.rs is not included in the repo
# and is used to experiment with things
[[bin]]
name = "dtest"
path = "dtest.rs"
